--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/QA/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/QA/Index.cshtml
@@ -7,15 +7,11 @@
     string curPath = Request.Url.GetLeftPart(UriPartial.Authority) + Request.ApplicationPath;
 }
 
-<div class="container" style="padding-top: 64px;">
-
-
-
-
+<div class="container" style="padding-top: 74px;">
 
     @if (Model == null)
     {
-        <h2 class="error-qa-title">Hiện chưa có câu hỏi nào</h2>
+        <h2 >Hiện chưa có câu hỏi nào</h2>
 
     }
     else
