--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Shared/_Layout.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Shared/_Layout.cshtml
@@ -66,7 +66,7 @@
                             <li class="active"><a href="@Url.Action("Index", "Home", new { eventId = eventId })"> <i class="icon-home"></i><span>Trang chủ</span></a></li>
                             <li> <a href="@Url.Action("Index", "Speaker", new { eventId = eventId })"> <i class="fa fa-users"></i><span>Diễn giả</span></a></li>
                             <li> <a href="@Url.Action("Index", "Sponsor", new { eventId = eventId })"> <i class="fa fa-users"></i><span>Nhà tài trợ</span></a></li>
-                            <li> <a href="@Url.Action("Index", "Session", new { eventId = eventId })"> <i class="fa fa-users"></i><span>Vào sự kiện</span></a></li>
+                            <li> <a href="@Url.Action("Index", "Session", new { eventId = eventId })"> <i class="fa fa-bars"></i><span>Vào sự kiện</span></a></li>
                             @*<li> <a href="@Url.Action("Index", "Schedule")"> <i class="fa fa-calendar"></i><span>Schedule</span></a></li>*@
                             <li> <a href="@Url.Action("Index", "Logout")"> <i class="fa fa-sign-out"></i><span>Thoát</span></a></li>
 
@@ -77,15 +77,17 @@
                             <li> <a href="@Url.Action("Index", "QA", new { eventId = eventId, sessionId = sessionId })"><i class="fa fa-question-circle"></i><span>Hỏi đáp</span></a></li>
                             <li> <a href="@Url.Action("Index", "Voting", new { eventId = eventId, sessionId = sessionId })"> <i class="fa fa-check-circle-o"> </i><span>Bình chọn</span></a></li>
                             <li> <a href="@Url.Action("Index", "Livestream", new { eventId = eventId, sessionId = sessionId })"> <i class="fa fa-video-camera"></i><span>Trực tiếp</span></a></li>
+                            
+                            <li> <a href="/Home/Index/@eventId"> <i class="fa fa-sign-out"></i><span>Quay lại</span></a></li>
 
                         }
                     }
                     @*<li>
-                            <a href="#">
-                                <i class="icon-mail"></i><span>Demo</span>
-                                <div class="badge badge-warning">6 New</div>
-                            </a>
-                        </li>*@
+            <a href="#">
+                <i class="icon-mail"></i><span>Demo</span>
+                <div class="badge badge-warning">6 New</div>
+            </a>
+        </li>*@
                 </ul>
             </div>
             @*<div class="admin-menu">
@@ -123,12 +125,12 @@
                 <div class="container-fluid">
                     <div class="navbar-holder d-flex align-items-center justify-content-between">
                         <ul class="nav-menu list-unstyled d-flex flex-md-row align-items-md-center">
-                            @{
+                            @*@{
                                 if (sessionId != null)
                                 {
                                     <button style="position: fixed;right: 18px;top: 18px;background-color: gray;border: 0;"><a href="/Session/Index/@eventId">Quay về trang lựa chọn</a></button>
                                 }
-                            }
+                            }*@
                         </ul>
                     </div>
                 </div>
