--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Timeline/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Timeline/Index.cshtml
@@ -6,16 +6,14 @@
 
 @model IEnumerable<Timeline>
 
-<div class="container">
-    <div class="page-header" style="padding-top: 74px;">
-        <h1 id="timeline">Dòng thời gian</h1>
-    </div>
+<div class="container" style="padding-top:74px;">
     @if (Model.Count() == 0)
     {
-        <h3>Hiện tại không có dòng thời gian nào</h3>
+        <h2>Hiện tại không có dòng thời gian nào</h2>
     }
     else
     {
+        <h2 id="timeline" class="col-md-12 text-center" style="margin-top: 20px;">Dòng thời gian</h2>
         <ul class="timeline">
             @{
                 int i = 1;
