+ Thêm đánh dấu câu hỏi đã trả lời (client), admin chưa làm + Làm xóa event (chưa xong)

--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_Layout.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_Layout.cshtml
@@ -170,7 +170,7 @@
                     <li><a href="@Url.Action("Index","Session" , new { id = eventId})"><i class="fa fa-calendar" aria-hidden="true"></i><span>Phiên Làm Việc</span></a></li>                  
                     <li><a href="@Url.Action("Index","Speaker", new { id = eventId})"><i class="fa fa-users"></i> <span>Diễn Giả</span></a></li>
                     <li><a href="@Url.Action("Index","Sponsor", new { id = eventId})"><i class="fa fa-users"></i> <span>Tài Trợ</span></a></li>
-                    <li><a><i class="fa fa-sign-out"></i> <span>Đăng Xuất</span></a></li>
+                    <li><a href="@Url.Action("Index","Events", new { id = eventId})"><i class="fa fa-sign-out"></i> <span>Đăng Xuất</span></a></li>
                     @*<li class="treeview">
             <a href="#">
                 <i class="icon-form"></i><span>Timeline</span>
