--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Home/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Home/Index.cshtml
@@ -15,6 +15,9 @@
                 <button class="btn btn-primary" data-toggle="modal" data-target="#modalUpdateEvent" onclick="showEditModal(@Html.Raw(Model.EventID), '@Html.Raw(Model.Name)', @Html.Raw(Model.CodeLogin), '@Html.Raw(Model.StartTime)', '@Html.Raw(Model.EndTime)', '@Html.Raw(Model.Address)', '@Html.Raw(Model.EventDescription)', @Html.Raw(Model.TemplateId), '@Html.Raw(Model.ImageURL)')" style="margin-top:20px">
                     <i class="fa fa-pencil" aria-hidden="true"></i>Chỉnh Sửa
                 </button>
+                <button class="btn btn-primary" onclick="deleteEvent(@(Model.EventID))" style="margin-top:20px">
+                    <i class="fa fa-pencil" aria-hidden="true"></i>Xóa
+                </button>
             </div>
 
         </div>
@@ -56,12 +59,12 @@
                 <div class="col-sm-8 evtinfo home-page-description">@Html.Raw(Model.EventDescription)</div>
             </div>
 
-            <div class="row">
-                <div class="col-sm-4 name-title">
-                    <label>Trang Chủ</label>
-                </div>
-                <div class="col-sm-8 evtinfo home-page-template">@Html.Raw(Model.TemplateId)</div>
-            </div>
+            @*<div class="row">
+                    <div class="col-sm-4 name-title">
+                        <label>Trang Chủ</label>
+                    </div>
+                    <div class="col-sm-8 evtinfo home-page-template">@Html.Raw(Model.TemplateId)</div>
+                </div>*@
         </div>
 
         <div class="col-sm-6">
@@ -182,6 +185,37 @@
             });
             //EventID, EventName, CodeLogin, StartTime, EndTime, Address, EventDescription, TemplateId, ImageURL
         }
+
+
+        function deleteEvent(eventId) {
+            swal({
+                title: "Bạn có chắc?",
+                text: "Cuộc bình chọn sẽ bị xóa",
+                type: "warning",
+                showCancelButton: true,
+                confirmButtonClass: "btn-danger",
+                confirmButtonText: "Xóa!",
+                cancelButtonText: "Không!",
+                closeOnConfirm: false
+            },
+                function () {
+                    $.ajax({
+                        url: '@Url.Action("DeleteEvent", "Home")',
+                        method: "POST",
+                        data: {
+                            EventID: eventId
+                        },
+                        success: function (data) {
+                            swal("Xóa!", "Cuộc bình chọn đã được xóa thành công", "success");
+                        },
+                        error: function (data) {
+                            console.log(data);
+                            swal("Lỗi", "Không thể xóa", "error");
+                        }
+                    });
+                });
+        }
+
 
     </script>
 }
