--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Voting/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Voting/Index.cshtml
@@ -12,7 +12,7 @@
             <div class="row">
                 <h2 class="col-sm-10">Bình Chọn</h2>
                 <div class="col-sm-2">
-                    <button class="btn btn-primary" type="submit" data-toggle="modal" data-target="#addSpeakerModal" style="margin-top:20px">
+                    <button class="btn btn-primary" type="submit" data-toggle="modal" data-target="#addVotingModal" style="margin-top:20px">
                         <i class="fa fa-plus" style="margin-right:7px" aria-hidden="true"></i>Thêm
                     </button>
                 </div>
