--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/QA/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/QA/Index.cshtml
@@ -140,71 +140,73 @@
                 <h4 class="modal-title">Thêm Hỏi Đáp</h4>
             </div>
             <div class="modal-body">
-                <div class="form-group">
+                <div class="form-group form-name">
                     <label class="col-sm-3 form-control-label">Tên:</label>
                     <div class="col-sm-9 input-group">
                         <div class="input-group-addon">
                             <i class="fa fa-briefcase" aria-hidden="true"></i>
                         </div>
-                        <input id="newName" type="text" class="form-control" placeholder="Enter QA's name">
+                        <input id="newName" type="text" class="form-control" placeholder="Nhập tên của hỏi đáp">
+                    </div>
+                    <div class="col-lg-offset-3 col-lg-9 div-name-error">
+                        <p class="empty" id="emptyWarning">Vui lòng nhập tên hỏi đáp!</p>
                     </div>
                 </div>
-            </div>
-            <div class="modal-footer">
-                <button id="btn-add" type="button" class="btn btn-primary" data-dismiss="modal" style="margin-top:5px">Thêm</button>
-                <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="modal fade" id="deleteQAModal" role="dialog">
-    <div class="modal-dialog">
-        <!-- Modal content-->
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h2 class="modal-title">Bạn có chắc</h2>
-            </div>
-            <div class="modal-body">
-                <h3 class="qa-del-title"></h3>
-            </div>
-            <div class="modal-footer">
-                <button id="btn-del" type="button" class="btn btn-default qa-del-id" data-dismiss="modal">Xóa</button>
-                <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
+                <div class="modal-footer">
+                    <button id="btn-add" type="button" class="btn btn-primary" data-dismiss="modal" style="margin-top:5px">Thêm</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
+
+    <div class="modal fade" id="deleteQAModal" role="dialog">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h2 class="modal-title">Bạn có chắc</h2>
+                </div>
+                <div class="modal-body">
+                    <h3 class="qa-del-title"></h3>
+                </div>
+                <div class="modal-footer">
+                    <button id="btn-del" type="button" class="btn btn-default qa-del-id" data-dismiss="modal">Xóa</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
-<!--Template Question-->
-<div id="template-question" style="display:none">
-    <div class="card list-qa" id="question">
-        <div class="card main-qa">
-            <span class="username-content"></span>
+    <!--Template Question-->
+    <div id="template-question" style="display:none">
+        <div class="card list-qa" id="question">
+            <div class="card main-qa">
+                <span class="username-content"></span>
+                <br />
+                <span class="create-time"></span>
+                <button id="btn-delete-question" class="btn btn-sm btn-reply" data-toggle="modal" data-target="#deleteQuestionModal" onclick="delQuestion()">Xóa</button>
+            </div>
+        </div>
+    </div>
+
+    <!--Template comment-->
+    <div id="template-comment" style="display:none">
+        <div class="card-header list-answer" id="comment">
+            <span id="username-reply"></span>
+            <span id="reply-content"></span>
             <br />
-            <span class="create-time"></span>
-            <button id="btn-delete-question" class="btn btn-sm btn-reply" data-toggle="modal" data-target="#deleteQuestionModal" onclick="delQuestion()">Xóa</button>
+            <span id="reply-time"></span>
+            <button id="btn-delete-comment" class="btn btn-sm btn-reply" data-toggle="modal" data-target="#deleteCommentModal" onclick="delComment()">Xóa</button>
         </div>
     </div>
-</div>
-
-<!--Template comment-->
-<div id="template-comment" style="display:none">
-    <div class="card-header list-answer" id="comment">
-        <span id="username-reply"></span>
-        <span id="reply-content"></span>
-        <br />
-        <span id="reply-time"></span>
-        <button id="btn-delete-comment" class="btn btn-sm btn-reply" data-toggle="modal" data-target="#deleteCommentModal" onclick="delComment()">Xóa</button>
-    </div>
-</div>
 
 
-<input type="hidden" id="questionId" value="" />
-@section scripts {
-    <script>
+    <input type="hidden" id="questionId" value="" />
+    @section scripts {
+        <script>
         var urlApi = '@curPath';
         var eventId = @eventId;
 
@@ -282,7 +284,7 @@
                 ]
             });
         });
-    </script>
+        </script>
 
-}
-<script src="~/Content/QAJs/QA.js"></script>
+    }
+    <script src="~/Content/QAJs/QA.js"></script>
