+ Chỉnh lại nút check câu hỏi đã trả lời xuống góc dưới + Format lại ngày của QA + Thêm dropdown list để sort câu hỏi + Đổi lại toàn bộ layout QA (modal, cách hiển thị) + Chỉnh lại cách post câu hỏi theo template mới + Đánh dấu nút like khi nhấn like

--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Session/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Session/Index.cshtml
@@ -172,6 +172,19 @@
 
         $(document).ready(function () {
             $('#tblSession').DataTable({
+                "oLanguage": {
+                    "sSearch": "Tìm kiếm",
+                    "oPaginate": {
+                        "sFirst": "Trang đầu",
+                        "sLast": "Trang cuối",
+                        "sNext": "Trang kế",
+                        "sPrevious": "Trang trước"
+                    },
+                    "sInfoEmpty": "",
+                    "sInfo": "Hiển thị từ dòng _START_ tới _END_ trong tổng số _TOTAL_ dòng",
+                    "sZeroRecords": "Không có dữ liệu",
+                    "sLengthMenu": "Hiển thị _MENU_ dòng"
+                },
                 ajax: {
                     url: urlApi + "/api/session/getSessionsByEventId/" + eventId,
                     dataSrc: ""
