--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/QA/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/QA/Index.cshtml
@@ -220,10 +220,10 @@
             $('.comment-del-title').html("Delete comment of " + name);
         }
 
-        function delQA(id, name) {
-            $('.qa-del-id').val(id);
-            $('.qa-del-title').html("Delete QA " + name);
-        }
+        //function delQA(id, name) {
+        //    $('.qa-del-id').val(id);
+        //    $('.qa-del-title').html("Delete QA " + name);
+        //}
 
         function editQA(id, name) {
             console.log(id);
@@ -263,6 +263,19 @@
 
         $(document).ready(function () {
             $('#tblQA').DataTable({
+                "oLanguage": {
+                    "sSearch": "Tìm kiếm",
+                    "oPaginate": {
+                        "sFirst": "Trang đầu",
+                        "sLast": "Trang cuối",
+                        "sNext": "Trang kế",
+                        "sPrevious": "Trang trước"
+                    },
+                    "sInfoEmpty": "",
+                    "sInfo": "Hiển thị từ dòng _START_ tới _END_ trong tổng số _TOTAL_ dòng",
+                    "sZeroRecords": "Không có dữ liệu",
+                    "sLengthMenu": "Hiển thị _MENU_ dòng"
+                },
                 ajax: {
                     url: urlApi + "api/QA/getAllQA/" + eventId,
                     dataSrc: ""
@@ -278,12 +291,42 @@
                         name: "Function",
                         render: function (data, type, row) {
                             return '<button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#editQAModal" onclick="editQA(' + row.qaId + ',\'' + row.qaName + '\')"><i class="fa fa-pencil"></i></button>     ' +
-                                '<button class="btn btn-danger btn-sm speaker-id" data-toggle="modal" data-target="#deleteQAModal" onclick="delQA(' + row.qaId + ',\'' + row.qaName + '\')"><i class="fa fa-trash"></i></button>';
+                                '<button class="btn btn-danger btn-sm speaker-id" onclick="delQA(' + row.qaId + ')"><i class="fa fa-trash"></i></button>';
                         }
                     }
                 ]
             });
-        });
+            });
+
+            function delQA(qaId) {
+                swal({
+                    title: "Bạn có chắc?",
+                    text: "Phần đặt câu hỏi này sẽ bị xóa",
+                    type: "warning",
+                    showCancelButton: true,
+                    confirmButtonClass: "btn-danger",
+                    confirmButtonText: "Xóa!",
+                    cancelButtonText: "Không!",
+                    closeOnConfirm: false
+                },
+                    function () {
+                        $.ajax({
+                            url: urlApi + '/api/QA/DeleteQA',
+                            method: "POST",
+                            data: {
+                                QAId: qaId,
+                            },
+                            success: function (data) {
+                                $('#tblQA').DataTable().ajax.reload();
+                                swal("Thành công!", "Xóa hỏi đáp thành công", "success");
+                            },
+                            error: function (data) {
+                                console.log(data);
+                            }
+                        });
+                    });
+            }
+
         </script>
 
     }
