--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Content/CustomCss/speaker.css
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Content/CustomCss/speaker.css
@@ -20,11 +20,19 @@
         box-shadow: 5px 10px 20px 7px #888888;
     }
     .modal-speaker {
-        margin-right:25px;
     }
 }
 
 .collection-empty-title {
     margin-top:20px;
     text-align:center;
+}
+
+.speaker-description {
+    padding-top: 25px;
+    font-size: 16px;
+}
+
+.speaker-title {
+    font-size: 20px;
 }
