--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Login/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Login/Index.cshtml
@@ -115,7 +115,7 @@
                             //    $('#div-section').append(sectionTemplate.html());
                             //}
                             for (var i = 0; i < data.data.length; i++) {
-                                window.location.href = window.location.href + "Home/Index/" + data.data[i].EventId;
+                                window.location.href = window.location.href + "Session/Index/" + data.data[i].EventId;
                             }
                         }
                         else {
