--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Speaker/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Speaker/Index.cshtml
@@ -19,7 +19,7 @@ else
         @{
             foreach (var speaker in Model.CollectionItems)
             {
-                <div class="col-md-4 col-sm-6 col-12" onclick="showModalSpeaker('@(speaker.Name)', '@(speaker.Description)')">
+                <div class="col-md-4 col-sm-6 col-12" onclick="showModalSpeaker('@(speaker.Name)', '@(speaker.Description)', '@(speaker.ImageUrl)')">
                     <div class="box-speaker-shadow">
                         <a href="" data-toggle="modal" data-target="#speakerModal">
                             <img class="img-fluid image-speaker-custom" src="@(speaker.ImageUrl)" alt="brand">
@@ -40,13 +40,13 @@ else
 
 <div id="speakerModal" class="modal fade" role="dialog">
     <div class="modal-dialog modal-speaker">
-
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title speaker-title"></h4>
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
             <div class="modal-body">
+                <img class="speaker-img image-speaker-custom"/>
                 <p class="speaker-description"></p>
             </div>
             <div class="modal-footer">
@@ -58,9 +58,11 @@ else
 
 @section scripts {
     <script>
-        function showModalSpeaker(name, description) {
+        function showModalSpeaker(name, description, imgUrl) {
             $('.speaker-title').html(name);
             $('.speaker-description').html(description);
+            $('.speaker-img').attr('src', imgUrl);
+
         }
 
     </script>
